# cellular-automata-playground

./: .gitignore  .hgignore  LICENSE  README  README.rst  buildout.cfg  pyproject.toml  setup.py
cellautoplay/: __main__.py  rules.py
src/cellautoplay/: __main__.py  rules.py
