[tool.poetry]
name = "cellular-automata-playground"
version = "1.0"
description = "Console-based script for playing with cellular automata."
authors = ["Wyatt Baldwin <code@wyattbaldwin.com>"]
license = "MIT"
repository = "https://github.com/wylee/cellular-automata-playground"

packages = [
    { include = "cellautoplay", from = "src" }
]

include = [
    "LICENSE",
    "README.rst",
]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.20.1"

[tool.poetry.scripts]
cellauto = "cellautoplay.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
